@@ -1,19 +1,21 @@
 package com.rebellworksllm.backend.matching.application;
 
-import com.rebellworksllm.backend.hubspot.application.HubSpotStudentProvider;
+import com.rebellworksllm.backend.email.application.EmailService;
 import com.rebellworksllm.backend.hubspot.application.dto.StudentContact;
+import com.rebellworksllm.backend.hubspot.application.HubSpotStudentProvider;
 import com.rebellworksllm.backend.matching.application.exception.InsufficientMatchesException;
 import com.rebellworksllm.backend.openai.domain.EmbeddingResult;
 import com.rebellworksllm.backend.matching.domain.*;
 import com.rebellworksllm.backend.openai.domain.OpenAIEmbeddingService;
-import com.rebellworksllm.backend.whatsapp.domain.WhatsAppService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 
+import static com.rebellworksllm.backend.matching.application.util.LogUtils.maskEmail;
 import static com.rebellworksllm.backend.matching.application.util.LogUtils.maskPhone;
 
 @Service
@@ -25,16 +27,22 @@ public class HubSpotWebhookService {
     private final StudentJobMatchEngine matchEngine;
     private final HubSpotStudentProvider studentProvider;
     private final OpenAIEmbeddingService embeddingService;
-    private final WhatsAppService whatsAppService;
+    private final EmailService emailService;
+    private final VacancyNotificationAdapter vacancyNotificationAdapter;
+
+    @Value("${mail.to}")
+    private String mailTo;
 
     public HubSpotWebhookService(StudentJobMatchEngine matchEngine,
                                  HubSpotStudentProvider studentProvider,
                                  OpenAIEmbeddingService embeddingService,
-                                 WhatsAppService whatsAppService) {
+                                 EmailService emailService,
+                                 VacancyNotificationAdapter vacancyNotificationAdapter) {
         this.matchEngine = matchEngine;
         this.studentProvider = studentProvider;
         this.embeddingService = embeddingService;
-        this.whatsAppService = whatsAppService;
+        this.vacancyNotificationAdapter = vacancyNotificationAdapter;
+        this.emailService = emailService;
     }
 
     @Async("jobMatchingExecutor")
@@ -55,15 +63,16 @@ public class HubSpotWebhookService {
 
         try {
             logger.info("Sending WhatsApp message to name: {}, phone: {}", studentContact.fullName(), maskPhone(studentContact.phoneNumber()));
-            whatsAppService.sendWithVacancyTemplate(
+            vacancyNotificationAdapter.notifyCandidate(
                     studentContact.phoneNumber(),
                     studentContact.fullName(),
-                    matches.getFirst().vacancy().website(),
-                    matches.get(0).vacancy().website(),
-                    matches.get(1).vacancy().website(),
-                    matches.get(2).vacancy().website(),
-                    matches.get(3).vacancy().website()
+                    matches.get(0).vacancy(),
+                    matches.get(1).vacancy()
             );
+
+            sendAdminNotificationEmail(studentContact);
+
+
             logger.info("WhatsApp message sent successfully to student: {}, phone: {}", studentContact.fullName(), maskPhone(studentContact.phoneNumber()));
         } catch (Exception e) {
             logger.error("Failed to send WhatsApp message for student: {}, error: {}", studentContact.fullName(), e.getMessage(), e);
@@ -91,5 +100,36 @@ public class HubSpotWebhookService {
                 studentContact.studyLocation(),
                 studentEmbeddingResult
         );
+    }
+
+    private void sendAdminNotificationEmail(StudentContact studentContact) {
+        String emailBody = String.format("""
+                        📢 *Nieuwe student gematcht!*
+
+                        👤 Naam: %s
+                        📧 E-mail: %s
+                        📱 Telefoon: %s
+                        🎓 Studie: %s
+                        📍 Locatie: %s
+
+                        HubSpot object ID: %s
+                        
+                        Bekijk de student in HubSpot voor meer details.
+                        """,
+                studentContact.fullName(),
+                studentContact.email(),
+                maskPhone(studentContact.phoneNumber()),
+                studentContact.study(),
+                studentContact.studyLocation(),
+                studentContact.id()
+        );
+
+        emailService.send(
+                mailTo,
+                "Nieuwe student gematcht",
+                emailBody
+        );
+
+        logger.info("Confirmation email sent to {} for student: {}", maskEmail(mailTo), studentContact.fullName());
     }
 }
